# pytree

./: README.md  pyproject.toml
pytree/: __init__.py  cli.py  generator.py
