[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytree"
version = "0.1.0"
description = "A tool to generate directory structures from tree-like text files"
readme = "README.md"
authors = [
    { name = "MiliScripts", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[project.scripts]
pytree = "pytree.cli:main"
